<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewItem_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <VideoView
        android:id="@+id/viewItem_video"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_item_image_height"
        android:contentDescription="@string/itemView_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rv_test_image" />

    <TextView
        android:id="@+id/viewItem_textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_item_title_marginStart"
        android:layout_marginTop="@dimen/view_item_title_marginTop"
        android:layout_marginEnd="@dimen/view_item_title_marginEnd"
        android:text="@string/test_title"
        android:textColor="@color/rvColorTitle"
        android:textSize="@dimen/view_item_title_textSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewItem_video" />

    <TextView
        android:id="@+id/viewItem_textSpeaker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_item_speaker_marginStart"
        android:layout_marginTop="@dimen/view_item_speaker_marginTop"
        android:layout_marginEnd="@dimen/view_item_speaker_marginEnd"
        android:text="@string/test_speaker"
        android:textSize="@dimen/view_item_speaker_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewItem_textTitle" />

    <TextView
        android:id="@+id/viewItem_textDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_item_description_marginStart"
        android:layout_marginTop="@dimen/view_item_description_marginTop"
        android:layout_marginEnd="@dimen/view_item_description_marginEnd"
        android:text="@string/test_description"
        android:textColor="@color/rvColorTitle"
        android:textSize="@dimen/view_item_description_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewItem_textSpeaker" />

    <ImageView
        android:id="@+id/viewItem_videoPreview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_item_image_height"
        android:contentDescription="@string/itemView_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rv_test_image" />

    <TextView
        android:id="@+id/viewItem_textVideoDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/view_item_duration_marginEnd"
        android:layout_marginBottom="@dimen/view_item_duration_marginBottom"
        android:background="@drawable/video_duration_shape"
        android:paddingStart="@dimen/view_item_duration_paddingStart"
        android:paddingTop="@dimen/view_item_duration_paddingTop"
        android:paddingEnd="@dimen/view_item_duration_paddingEnd"
        android:paddingBottom="@dimen/view_item_duration_paddingBottom"
        android:text="@string/test_video_duration"
        android:textColor="@color/rvColorVideoDuration"
        app:layout_constraintBottom_toBottomOf="@+id/viewItem_video"
        app:layout_constraintEnd_toEndOf="@+id/viewItem_video" />


</androidx.constraintlayout.widget.ConstraintLayout>
